style: 스타일 변경 - p,span: 자동 줄바꿈 적용 - p: margin 쓸 일이 더 없어서 0으로 기본 적용 - 검색창, 모드 버튼 z-index 조정 - 네이버 지도 position: absolute -> fixed, height: 100% -> 100vh로 변경 - 네이버 지도 정보창 스타일 추가

--- a/app/[id]/contact/Contact.module.scss
+++ b/app/[id]/contact/Contact.module.scss
@@ -56,8 +56,6 @@ details.details[open] {
 
 .today {
   display: block;
-  margin-block-start: 0;
-  margin-block-end: 0;
   font-weight: bold;
 }
 
@@ -83,9 +81,6 @@ dialog[open].modal {
   color: var(--color-font-secondary);
   text-align: center;
   font-size: var(--size-font-l);
-  & p {
-    margin: 0;
-  }
 }
 
 .summarize_title {
