--- a/app/[id]/naver-map/NaverMaps.module.scss
+++ b/app/[id]/naver-map/NaverMaps.module.scss
@@ -1,10 +1,10 @@
 .map_box {
-  position: absolute;
+  position: fixed;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   top: 0;
   left: 0;
-  z-index: 9999999;
+  z-index: 99999999;
 }
 
 .map {
@@ -26,24 +26,53 @@
 
   h3 {
     margin: 0;
-    font-size: var(--size-font-m);
+    font-size: var(--size-font-l);
   }
 }
 
 .place_address_box {
   margin-top: 10px;
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 1rem;
-  align-items: baseline;
   line-height: 2rem;
-  p {
-    margin: 0;
-  }
 }
 
 .place_address {
-  font-size: var(--size-font-xl);
+  font-size: 22px;
+  letter-spacing: 1px;
+  svg {
+    vertical-align: middle;
+  }
+}
+
+.place_copy_text {
+  color: var(--color-primary-accent);
+  font-size: var(--size-font-l);
+  vertical-align: top;
+}
+
+.nav_box {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  width: 100%;
+  padding: 0 10px;
+  display: flex;
+  justify-content: end;
+  column-gap: 1rem;
+}
+
+.nav_inner_box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 12px;
+  border-radius: 10px;
+  border: 1px solid var(--color-font-primary);
+}
+
+.place_copy_box {
+  display: flex;
+  align-items: center;
 }
 
 .notification {
